--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,6 @@ body{
 	background: #bdbdbd;
 	margin: 0;
 }
-div{
-	box-sizing: border-box;
-}
 header{
 	background: white;
 	padding: 10px;
@@ -19,12 +16,19 @@ div.post{
 div.post img{
 	width: 100%
 }
-div.post-header {
-	background-color: yellow;
-	width: 60%
+div.post .post-header div:first-child{
+	display: inline-block;
+	width: 80%
+}
+div.post .post-header div:last-child{
+	display: inline-block;
+    padding: 10px;
+	width: 20%
+    text-align: right;
+    color: gray;
 }
 div.date{
-	background-color: green;
+	background-color: white
 	width: 10%
 	float: right;
 	text-align: right;
